added padding to V0 examples

--- a/packages/docs/content/blocks/index.mdx
+++ b/packages/docs/content/blocks/index.mdx
@@ -87,7 +87,7 @@ PlayCanvas Blocks are high-level component primitives for React. Clean, simple, 
 
 ## How it works?
 
-Built on @playcanvas/react and the PlayCanvas engine, Blocks abstract the underlying engine to provide a high-level component API that's easy to use and understand. Internally, each block maps to a PlayCanvas entity and component hierarchy, giving you full control with a familiar dev experience.
+Built on** @playcanvas/react** and the **PlayCanvas** engine, Blocks abstract the underlying engine to provide a high-level component API that's easy to use and understand. Internally, each block maps to a PlayCanvas entity and component hierarchy, giving you full control with a familiar dev experience.
 
 ## Featured blocks
 
